# intel-telemetry-tool

./: README.md  build.sh
tool/: CMakeLists.txt  telemetry.cpp
tool/display/: bar.cpp  bar.h  displayable.cpp  displayable.h  screen.cpp  screen.h  sequence.cpp  sequence.h
